fix alignment profile small screen

--- a/src/app/pages/profile/profile.component.less
+++ b/src/app/pages/profile/profile.component.less
@@ -1,10 +1,11 @@
 :host {
   flex: 1 1 auto;
+  height: 100%;
 }
 
 .profile {
   display: flex;
-  height: calc(100vh - 180px);
+  height: 480px;
   min-width: 100%;
   justify-content: center;
   align-items: center;
